--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,13 @@
+title = 'Memo !'
 !!!
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body!= body
+    head
+        title= title
+        link(rel='stylesheet', href='/stylesheets/style.css')
+    //body!= body
+    body
+        block header
+        block content
+            p this the content
+        block footer
+            p this is the footer
