--- a/views/tpls/layout.jade
+++ b/views/tpls/layout.jade
@@ -7,11 +7,11 @@ html
         block css
         - if (useYUI)
             script(src='http://yui.yahooapis.com/3.5.0/build/yui/yui-min.js')
-        block script-head
+        block script_head
     body
         block header
         block content
             p this the content
         block footer
             p this is the footer
-        block script-foot
+        block script_foot
