--- a/views/tpls/layout.jade
+++ b/views/tpls/layout.jade
@@ -3,15 +3,17 @@ html
     head
         meta(charset='utf-8')
         title #{title}
-        link(rel='stylesheet', href='/stylesheets/style.css')
+        - if(useCommonCss)
+            link(rel='stylesheet', href='/stylesheets/common.css')
         block css
         - if (useYUI)
             script(src='http://yui.yahooapis.com/3.5.0/build/yui/yui-min.js')
         block script_head
     body
-        block header
-        block content
-            p this the content
-        block footer
-            p this is the footer
+        header.g-header
+            block header
+        section.content
+            block content
+        footer.g-footer
+            block footer
         block script_foot
